--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Your Name</title>
+<title>Jennifer Garza</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -287,13 +287,17 @@ $(document).ready(function () {
         <li>
   <a href="index.html">Home</a>
 </li>
+<li class="dropdown-header">Portfolio</li>
 <li>
-  <a href="portfolio.html">Portfolio</a>
+  <a href="https://github.com/JG2307/jg2307.github.io">
+    <span class="fab fa-github fa-lg"></span>
+     
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;your@email.com&gt;">
+  <a href="mailto:&lt;jennifer.garza2307@gmail.com&gt;">
     <span class="fas fa-envelope fa-lg"></span>
      
   </a>
@@ -325,20 +329,17 @@ $(document).ready(function () {
 
 <p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-i-am-jennifer." class="section level1">
+<h1>Welcome! I am Jennifer.</h1>
 <p></br></p>
-<div id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip." class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to tip.</h5>
+<div id="i-am-from-south-texas-brownsville.-i-am-a-4th-year-public-health-major." class="section level5">
+<h5>I am from south Texas (Brownsville). I am a 4th year Public Health Major.</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses." class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
-</div>
-<div id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees." class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced degrees.</h5>
+<div id="i-enjoy-running-and-reading." class="section level5">
+<h5>I enjoy running and reading.</h5>
 </div>
 <div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
+<h5>I don’t have any data-related projects either, but if I did you could find them <a href="https://github.com/jg2307/jg2307.github.io">here</a>!</h5>
 <hr />
 </div>
 </div>
