--- a/portfolio.html
+++ b/portfolio.html
@@ -293,7 +293,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;your@email.com&gt;">
+  <a href="mailto:&lt;jennifer.garza2307@gmail.com&gt;">
     <span class="fas fa-envelope fa-lg"></span>
      
   </a>
