--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ $(document).ready(function () {
 <h5>I enjoy running and reading.</h5>
 </div>
 <div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you could find them <a href="https://github.com/jg2307/jg2307.github.io">here</a>!</h5>
+<h5>I don’t have any data-related projects either, but if I did you could find them <a href="https://github.com/jg2307/">here</a>!</h5>
 <hr />
 </div>
 </div>
